
2006-09-13 cjg
 * Removed @foo@ from citations

2006-09-14 cjg
 * Removed links to old prototype.js in template

2006-09-14 cjg
 * Moved defaultcfg to lib

2006-09-15 cjg
 * Cleaned up the neat citation (not completely)

2006-09-15 cjg
 * Made line breaks in abort show as <br> in HTML report.

2006-09-15 cjg
 * Fixed bug in Script::Compiled->runtime_error
 * Made Scripts report an error if an unknown function 
    call is met rather than just bailing with a perl error.

2006-09-18 cjg
 * Sorted out time. Times in the db are GMT. Logs are logged in
    localtime. When times are rendered they are converted into
    localtime. Dates are not subject to localtime unless they have
    an hour set too.
 * Time functions in Utils reworked for local/GMT issues.
 * Dates inside eprints can now have T separating date and time and
    Z at the end so it can take ISO date-times.

2006-09-19 cjg
 * Broke up core.pl
 * Fixed some small bugs

2006-09-19 cjg
 * Changed ref="" to name="" in pins in phrase files.

2006-09-19 cjg
 * Added phrases for alt text in warning/error icons
 * Fixed bug in subject component being slow!
 * Reworked subject component (still needs js and css)
 * Removed unused Subjects input component

2006-09-20 cjg
 * EPrints should now install as group apache and group
    writable directories.
 * Added EPrints::try method which runs a code reference in an eval and
    if it fails calls abort with the error.
 * Added dir_perms and file_perms to SystemSettings

2006-09-20 cjg
 * Subject Component now collapses and expands using javascript
 * Errors in document validation now link to the right page

2006-09-20 cjg
 * Broke up validate.pl into separate files
 * Cleaned up validate of eprints
 * Fixed it so that document & file validation errors now have a link
    to the page with the upload component on.
 * Moved delete-document button to be in the tab label
 * Removed the document-change button
 * s/upload some files/upload a file/