@@ -2,42 +2,25 @@
 <!DOCTYPE html SYSTEM "entities-en.dtd" > 
 
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ep="http://eprints.org/ep2/template">
+      xmlns:ep="http://eprints.org/ep3/template">
   <head>
     <title>&archivename; - <ep:pin ref="title" textonly="yes" /></title>
-    <script src="&base_url;/eprints.js" type="text/javascript"><!-- nope --></script>
-    <style type="text/css" media="screen">
-@import  url(&base_url;/style/eprints.css);
-    </style>
-    <style type="text/css" media="print">
-@import  url(&base_url;/style/eprints.css);
-@import  url(&base_url;/style/print.css);
-    </style>
+    <script src="&base_url;/javascript/auto.js" type="text/javascript"><!-- nope --></script>
+    <style type="text/css" media="screen">@import  url(&base_url;/style/auto.css);</style>
+    <style type="text/css" media="print">@import  url(&base_url;/style/print.css);</style>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="Top" href="&frontpage;" />
     <link rel="Search" href="&perl_url;/search" />
     <link rel="Help" href="&base_url;/help" />
-    <style type='text/css'>
-    </style>
-    <noscript>
-      <style type='text/css'>
-        .ep_no_js { display: block; }
-        .ep_only_js { display: none; }
-      </style>
-    </noscript>
-    <script language="JavaScript" type="text/JavaScript">
-    <!--
-        window.document.write( '<style>body { height: '+(window.innerHeight+1)+'px; }</style>' );
-    -->
-    </script>
     <ep:pin ref="head" />
   </head>
   <body bgcolor="#ffffff" text="#000000">
+    <div class="ep_noprint"><noscript><style type='text/css'>@import url(&base_url;/style/nojs.css);</style></noscript></div>
     <ep:pin ref="pagetop" />
     <div class="ep_tm_header ep_noprint">
 
-      <a href="http://www.eprints.org/"><img alt="EPrints" src="/images/eprintslogo.gif" class="ep_tm_logo" /></a>
+      <div class="ep_tm_logo"><a href="http://www.eprints.org/">&logo;</a></div>
       <div><a class="ep_tm_archivetitle" href="&frontpage;">&archivename;</a></div>
 
   <ul class="ep_tm_menu"><li><a href="&frontpage;">Home</a></li><li><a href="&base_url;/information.html">About</a></li><li><a href="&base_url;/view/year">Browse by Year</a></li><li><a href="&base_url;/view/subjects">Browse by Subject</a></li><li><a href="&userhome;">User Area</a></li><li><a href="&base_url;/help">Help</a></li></ul>
