@@ -1,10 +1,0 @@
-@import url(general.css);
-@import url(template.css);
-@import url(tabs.css);
-@import url(surround.css);
-@import url(search.css);
-@import url(blister.css);
-@import url(form.css);
-@import url(toolbox.css);
-@import url(messages.css);
-@import url(upload.css);
