@@ -1,3 +1,5 @@
+@import url( "auto.css" );
+
 .ep_noprint {
 	display: none;
 }
